:fix: fixing star games not being visible

--- a/src/styles/sass/ranking.sass
+++ b/src/styles/sass/ranking.sass
@@ -98,7 +98,7 @@
 .member-info
     align-items: center
     justify-content: space-between
-    padding: 0 20px
+    padding: 0 10px
     width: 100%
     max-width: 90%
     @media (max-width: $tablets)
